--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.21.1",
-    "pwmochawesome": "^1.0.1"
+    "@playwright/test": "^1.21.1"
   }
 }
