--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,4 +21,7 @@ jobs:
       run: npx playwright test
     - uses: actions/upload-artifact@v2
       if: always()
-
+      with:
+        name: playwright-report
+        path: playwright-report/
+        retention-days: 30
