added logout validation

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,10 +4,11 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
+    paths-ignore: [ '*.md','*.yml'  ]
 jobs:
   test:
     timeout-minutes: 60
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v2
