--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -2,9 +2,14 @@ name: Playwright Tests
 on:
   push:
     branches: [ main, master ]
+    paths-ignore:
+      - '**/README.md'
+      - '**/playwright.yml'
   pull_request:
     branches: [ main, master ]
-    paths-ignore: [ '*.md','*.yml'  ]
+    paths-ignore:
+      - '**/README.md'
+      - '**/playwright.yml'
 jobs:
   test:
     timeout-minutes: 60
