--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.22.1"
+  },
+  "dependencies": {
+    "chance": "^1.1.8",
+    "generate-random-data": "^0.0.3"
   }
 }
